# joi

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN-INAPP-CONDITIONING.md  PLAN-MODULARIZATION.md  PLAN-NATIVE-MEDIA.md  PLAN-TUI.md  PLAN.md  PLAN_REVIEW.md  README.md  SPEC.md  index.html  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
config/: joi.example.json  joi.example.toml  joi.example.yaml
crates/joi-app/: Cargo.toml
crates/joi-app/src/: lib.rs
crates/joi-app/tests/: headless.rs
crates/joi-cli/: Cargo.toml
crates/joi-cli/src/: main.rs
crates/joi-core/: Cargo.toml
crates/joi-core/src/: capture.rs  clock.rs  config.rs  connectivity.rs  error.rs  lib.rs  manager.rs  media.rs  metrics.rs  secrets.rs  settings.rs  tools.rs  util.rs
crates/joi-core/src/history/: file.rs  memory.rs  mod.rs  session.rs
crates/joi-core/src/session/: event.rs  mod.rs
crates/joi-media/: Cargo.toml
crates/joi-media/src/: capture.rs  engine.rs  lib.rs  playback.rs  processed_mic_recorder.rs  screen.rs
crates/joi-providers/: Cargo.toml  NOTES-adk.md
crates/joi-providers/src/: factory.rs  gemini.rs  lib.rs  mock.rs  openai.rs
crates/joi-server/: Cargo.toml
crates/joi-server/src/: main.rs
crates/joi-testkit/: Cargo.toml
crates/joi-testkit/src/: lib.rs
crates/joi-tools/: Cargo.toml
crates/joi-tools/src/: lib.rs
crates/joi-tui/: Cargo.toml
crates/joi-tui/src/: app.rs  commands.rs  input.rs  keys.rs  main.rs  picker.rs  theme.rs  transcript.rs  ui.rs
doc/: ARCH.md  CONFIG.md  PLAN.md  SETTINGS.md  SPEC.md  TOOLS.md  TOOLS_PLAN.md
scripts/: check.sh  setup-linux.sh
src/: App.tsx  index.css  ipc.test.ts  ipc.ts  window.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  secret_store.rs
src/bindings/: AppState.ts  ConnectionStatus.ts  HistoryMeta.ts  MetricsSnapshot.ts  Reachability.ts  Speaker.ts  TerminalCfg.ts  UiCfg.ts  UiEvent.ts
src/components/: Controls.tsx  Prompt.tsx  Terminal.tsx  icons.tsx
src/media/: dsp.test.ts  dsp.ts  mic-worklet.js  mic.ts  playback-worklet.js  playback.ts
