[workspace]
resolver = "2"
members = ["crates/joi-core", "crates/joi-providers", "crates/joi-testkit", "crates/joi-media", "crates/joi-app", "crates/joi-cli", "crates/joi-server", "crates/joi-tui", "src-tauri"]
exclude = ["vendor"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

# Shared dependencies. Crates opt in via `dep.workspace = true`.
[workspace.dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Maintained fork of the (now archived) serde_yaml; used for both parsing and writing config YAML.
serde_norway = "0.9"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "fs"] }
tracing = "0.1"
# `env` only: YAML parsing is done with serde_norway so the deprecated serde_yaml stays out of tree.
figment = { version = "0.10", features = ["env"] }
directories = "6"
secrecy = { version = "0.10", features = ["serde"] }
# Generates the frontend's TS IPC types from the Rust serde types (single source of truth for
# Seam B). Pure Rust, no OS/IO — fits joi-core's purity rule. Honors `#[serde(...)]` attrs.
ts-rs = "11"

# dev-dependencies shared across crates
pretty_assertions = "1"
proptest = "1"

# Lints applied to every workspace crate. `unwrap`/`expect`/`panic` are denied in
# library code (PLAN §1, §5). `deny(warnings)` is intentionally NOT set here — it is
# applied CI-only via RUSTFLAGS="-D warnings" so a future compiler lint bump cannot
# break the build (PLAN §5, m-6).
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# pedantic lints that fight readability for this codebase
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[workspace.lints.rust]
missing_docs = "warn"

# Test/bench code may unwrap freely; the deny above is for library paths only.
# Per-crate test modules re-allow via `#![cfg_attr(test, allow(...))]` where needed.

[profile.release]
strip = true
lto = "thin"

# Vendored adk-realtime (crates/joi-providers depends on it) with a one-field fix: send the current
# `realtimeInput.audio` blob instead of the deprecated `mediaChunks[]`, which current Gemini Live
# models (gemini-3.1-flash-live-preview) reject. Patched source in vendor/adk-realtime.
[patch.crates-io]
adk-realtime = { path = "vendor/adk-realtime" }
# Patched sonora-aec3: upstream 0.1.0 panics (`slice index starts at N but ends at N-1`) when the
# AEC adaptive filter *shrinks* (echo path shortens after a barge-in flush / audio stall) — its
# `zero_filter` only handles growth. The vendored copy no-ops the shrink case. See
# vendor/sonora-aec3/src/adaptive_fir_filter.rs (PATCH(joi)).
sonora-aec3 = { path = "vendor/sonora-aec3" }
