[package]
name = "joi"
description = "Joi — local voice companion (Tauri shell + composition root)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "joi"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
joi-core = { path = "../crates/joi-core" }
joi-providers = { path = "../crates/joi-providers" }
joi-media = { path = "../crates/joi-media" }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Linux/WebKitGTK: access the underlying webview to enable media capture + grant getUserMedia
# (denied by default without a permission handler — the M0 media spike). Pinned to the same version
# wry uses so `PlatformWebview::inner()` returns a matching `webkit2gtk::WebView`.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
