[package]
name = "joi-app"
description = "Composition root + Seam-A JoiApp API for the JOI engine (no host, no UI)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
joi-core = { path = "../joi-core" }
joi-tools = { path = "../joi-tools" }
joi-providers = { path = "../joi-providers" }
joi-media = { path = "../joi-media" }
tokio = { workspace = true }
tokio-util.workspace = true
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json = { workspace = true }
tempfile = "3"
