[package]
name = "joi-cli"
description = "Headless host for the JOI engine — proves it runs with no Tauri/GUI."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "joi-cli"
path = "src/main.rs"

[dependencies]
joi-app = { path = "../joi-app" }
joi-core = { path = "../joi-core" }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
