[package]
name = "joi-core"
description = "Pure domain logic and port traits for Joi. No Tauri, no provider SDKs."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
tokio.workspace = true
tracing.workspace = true
figment.workspace = true
directories.workspace = true
ts-rs.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
figment = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
