[package]
name = "joi-core"
description = "Pure domain logic and port traits for Joi. No device I/O, no provider SDKs, no host."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tokio-util.workspace = true
tracing.workspace = true
figment.workspace = true
directories.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
figment = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
