[package]
name = "joi-media"
description = "Native audio capture/playback (cpal) and screen capture for Joi. Keeps all OS/audio deps out of joi-core."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
joi-core = { path = "../joi-core" }
cpal = "0.15"
sonora = "0.1"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
