[package]
name = "joi-providers"
description = "RealtimeSession adapters: mock (tests/headless) and gemini (real, over vendored adk-realtime)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Both adapters compile by default. `mock` is pure Rust; `gemini` pulls the adk-realtime adapter.
default = ["mock", "gemini"]
mock = []
# `gemini` pulls the adk-realtime adapter. Only its `gemini` backend feature is enabled — not
# openai/livekit/vertex — to keep the dependency tree minimal (PLAN §7.4).
gemini = ["dep:adk-realtime", "dep:rustls", "dep:reqwest"]

[dependencies]
joi-core = { path = "../joi-core" }
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
secrecy.workspace = true
thiserror.workspace = true
adk-realtime = { version = "0.8", default-features = false, features = ["gemini"], optional = true }
# Direct dep only to install the rustls crypto provider once (adk-realtime requires it). Already in
# the tree transitively, so this adds no build cost.
rustls = { version = "0.23", optional = true }
# Token-free reachability probe (Gemini models.list). Gemini-only, so gated to that feature.
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
