[package]
name = "joi-server"
description = "HTTP/WS host for the JOI engine — drives JoiApp (Seam A) over a WebSocket. No Tauri."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "joi-server"
path = "src/main.rs"

[dependencies]
joi-app = { path = "../joi-app" }
joi-core = { path = "../joi-core" }
tokio = { workspace = true, features = ["net"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
