[package]
name = "joi-tools"
description = "Built-in tool implementations for Joi's agent harness."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
joi-core = { path = "../joi-core" }
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-util.workspace = true
